Fix, need to use main branch, fixups for MSI downloads

--- a/doc/doc/download.rst.j2
+++ b/doc/doc/download.rst.j2
@@ -140,7 +140,7 @@ Windows
    +--------------+------------------------------+------------------------------+
    | Python 3.3   | |NUITKA_UNSTABLE_MSI_33_64|  | Not available as MSI file    |
    +--------------+------------------------------+------------------------------+
-   | Python 3.4   | |NUITK-A_UNSTABLE_MSI_34_64| | Not available as MSI file    |
+   | Python 3.4   | |NUITKA_UNSTABLE_MSI_34_64|  | Not available as MSI file    |
    +--------------+------------------------------+------------------------------+
    | Python 3.5   | |NUITKA_UNSTABLE_MSI_35_64|  | |NUITKA_UNSTABLE_MSI_35_32|  |
    +--------------+------------------------------+------------------------------+
@@ -367,6 +367,14 @@ Github.
 
    `Nuitka 0.6.19rc6 Python3.9 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py39.msi>`__
 
+.. |NUITKA_UNSTABLE_MSI_310_32| replace::
+
+   `Nuitka 0.6.19rc6 Python3.9 32 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win32.py39.msi>`__
+
+.. |NUITKA_UNSTABLE_MSI_310_64| replace::
+
+   `Nuitka 0.6.19rc6 Python3.9 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py39.msi>`__
+
 .. |NUITKA_STABLE_MSI_27_32| replace::
 
    `Nuitka 0.6.18.4 Python2.7 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py27.msi>`__
@@ -428,6 +436,14 @@ Github.
    `Nuitka 0.6.18.4 Python3.9 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py39.msi>`__
 
 .. |NUITKA_STABLE_MSI_39_64| replace::
+
+   `Nuitka 0.6.18.4 Python3.9 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py39.msi>`__
+
+.. |NUITKA_STABLE_MSI_310_32| replace::
+
+   `Nuitka 0.6.18.4 Python3.9 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py39.msi>`__
+
+.. |NUITKA_STABLE_MSI_310_64| replace::
 
    `Nuitka 0.6.18.4 Python3.9 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py39.msi>`__
 
