Remove MSI downloads, too much trouble and no future.

--- a/doc/doc/download.rst.j2
+++ b/doc/doc/download.rst.j2
@@ -96,68 +96,9 @@ well. So you can install with ``pip`` as follows.
 Windows
 =======
 
--  |WINDOWS_LOGO| Stable MSI Installer:
-
-   .. note::
-
-      The versions of the MSI have a different numbering scheme in their
-      filenames, explained in the User Manual.
-
-      Also, it's recommended to use PyPI and pip based installation on
-      Windows, as MSI cannot be used e.g. with ``virtualenv`` and other
-      clever dependency management tools.
-
-   +---------------+----------------------------+----------------------------+
-   | Python        | MSI 64 Bits                | MSI 32 Bits                |
-   | Version       |                            |                            |
-   +===============+============================+============================+
-   | Python 2.6    | Not available as MSI       | Not available as MSI       |
-   +---------------+----------------------------+----------------------------+
-   | Python 2.7    | |NUITKA_STABLE_MSI_27_64|  | |NUITKA_STABLE_MSI_27_32|  |
-   +---------------+----------------------------+----------------------------+
-   | Python 3.3    | |NUITKA_STABLE_MSI_33_64|  | Not available as MSI       |
-   +---------------+----------------------------+----------------------------+
-   | Python 3.4    | |NUITKA_STABLE_MSI_34_64|  | Not available as MSI       |
-   +---------------+----------------------------+----------------------------+
-   | Python 3.5    | |NUITKA_STABLE_MSI_35_64|  | |NUITKA_STABLE_MSI_35_32|  |
-   +---------------+----------------------------+----------------------------+
-   | Python 3.6    | |NUITKA_STABLE_MSI_36_64|  | |NUITKA_STABLE_MSI_36_32|  |
-   +---------------+----------------------------+----------------------------+
-   | Python 3.7    | |NUITKA_STABLE_MSI_37_64|  | |NUITKA_STABLE_MSI_37_32|  |
-   +---------------+----------------------------+----------------------------+
-   | Python 3.8    | |NUITKA_STABLE_MSI_38_64|  | |NUITKA_STABLE_MSI_38_32|  |
-   +---------------+----------------------------+----------------------------+
-   | Python 3.9    | |NUITKA_STABLE_MSI_39_64|  | |NUITKA_STABLE_MSI_39_32|  |
-   +---------------+----------------------------+----------------------------+
-   | Python 3.10   | |NUITKA_STABLE_MSI_310_64| | |NUITKA_STABLE_MSI_310_32| |
-   +---------------+----------------------------+----------------------------+
-
--  |WINDOWS_LOGO| Develop MSI Installer:
-
-   +--------------+------------------------------+------------------------------+
-   | Python       | MSI 64 Bits                  | MSI 32 Bits                  |
-   | Version      |                              |                              |
-   +==============+==============================+==============================+
-   | Python 2.6   | Not available as MSI file    | Not available as MSI file    |
-   +--------------+------------------------------+------------------------------+
-   | Python 2.7   | |NUITKA_UNSTABLE_MSI_27_64|  | |NUITKA_UNSTABLE_MSI_27_32|  |
-   +--------------+------------------------------+------------------------------+
-   | Python 3.3   | |NUITKA_UNSTABLE_MSI_33_64|  | Not available as MSI file    |
-   +--------------+------------------------------+------------------------------+
-   | Python 3.4   | |NUITKA_UNSTABLE_MSI_34_64|  | Not available as MSI file    |
-   +--------------+------------------------------+------------------------------+
-   | Python 3.5   | |NUITKA_UNSTABLE_MSI_35_64|  | |NUITKA_UNSTABLE_MSI_35_32|  |
-   +--------------+------------------------------+------------------------------+
-   | Python 3.6   | |NUITKA_UNSTABLE_MSI_36_64|  | |NUITKA_UNSTABLE_MSI_36_32|  |
-   +--------------+------------------------------+------------------------------+
-   | Python 3.7   | |NUITKA_UNSTABLE_MSI_37_64|  | |NUITKA_UNSTABLE_MSI_37_32|  |
-   +--------------+------------------------------+------------------------------+
-   | Python 3.8   | |NUITKA_UNSTABLE_MSI_38_64|  | |NUITKA_UNSTABLE_MSI_38_32|  |
-   +--------------+------------------------------+------------------------------+
-   | Python 3.9   | |NUITKA_UNSTABLE_MSI_39_64|  | |NUITKA_UNSTABLE_MSI_39_32|  |
-   +--------------+------------------------------+------------------------------+
-   | Python 3.10  | |NUITKA_UNSTABLE_MSI_310_64| | |NUITKA_UNSTABLE_MSI_310_32| |
-   +--------------+------------------------------+------------------------------+
+The MSI installers are discontinued as Python has deprecated their support for
+them, as well as Windows 10 making it harder to users to install them. Using
+the PyPI installation is recommended on Windows.
 
 Debian/Ubuntu/Mint
 ==================
@@ -308,134 +249,6 @@ git, or use PyPI.
 Visit https://github.com/Nuitka/Nuitka for the Nuitka repository on
 Github.
 
-
-.. |NUITKA_UNSTABLE_MSI_27_32| replace::
-
-   `Nuitka 0.6.19rc6 Python2.7 32 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win32.py27.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_27_64| replace::
-
-   `Nuitka 0.6.19rc6 Python2.7 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py27.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_33_64| replace::
-
-   `Nuitka 0.6.19rc6 Python3.3 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py33.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_34_64| replace::
-
-   `Nuitka 0.6.19rc6 Python3.4 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py34.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_35_32| replace::
-
-   `Nuitka 0.6.19rc6 Python3.5 32 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win32.py35.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_35_64| replace::
-
-   `Nuitka 0.6.19rc6 Python3.5 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py35.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_36_32| replace::
-
-   `Nuitka 0.6.19rc6 Python3.6 32 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win32.py36.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_36_64| replace::
-
-   `Nuitka 0.6.19rc6 Python3.6 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py36.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_37_32| replace::
-
-   `Nuitka 0.6.19rc6 Python3.7 32 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win32.py37.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_37_64| replace::
-
-   `Nuitka 0.6.19rc6 Python3.7 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py37.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_38_32| replace::
-
-   `Nuitka 0.6.19rc6 Python3.8 32 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win32.py38.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_38_64| replace::
-
-   `Nuitka 0.6.19rc6 Python3.8 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py38.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_39_32| replace::
-
-   `Nuitka 0.6.19rc6 Python3.9 32 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win32.py39.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_39_64| replace::
-
-   `Nuitka 0.6.19rc6 Python3.9 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py39.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_310_32| replace::
-
-   `Nuitka 0.6.19rc6 Python3.9 32 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win32.py39.msi>`__
-
-.. |NUITKA_UNSTABLE_MSI_310_64| replace::
-
-   `Nuitka 0.6.19rc6 Python3.9 64 bit MSI <https://nuitka.net/releases/Nuitka-6.0.1960.win-amd64.py39.msi>`__
-
-.. |NUITKA_STABLE_MSI_27_32| replace::
-
-   `Nuitka 0.6.18.4 Python2.7 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py27.msi>`__
-
-.. |NUITKA_STABLE_MSI_27_64| replace::
-
-   `Nuitka 0.6.18.4 Python2.7 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py27.msi>`__
-
-.. |NUITKA_STABLE_MSI_33_64| replace::
-
-   `Nuitka 0.6.18.4 Python3.3 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py33.msi>`__
-
-.. |NUITKA_STABLE_MSI_34_64| replace::
-
-   `Nuitka 0.6.18.4 Python3.4 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py34.msi>`__
-
-.. |NUITKA_STABLE_MSI_35_32| replace::
-
-   `Nuitka 0.6.18.4 Python3.5 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py35.msi>`__
-
-.. |NUITKA_STABLE_MSI_35_64| replace::
-
-   `Nuitka 0.6.18.4 Python3.5 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py35.msi>`__
-
-.. |NUITKA_STABLE_MSI_36_32| replace::
-
-   `Nuitka 0.6.18.4 Python3.6 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py36.msi>`__
-
-.. |NUITKA_STABLE_MSI_36_64| replace::
-
-   `Nuitka 0.6.18.4 Python3.6 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py36.msi>`__
-
-.. |NUITKA_STABLE_MSI_37_32| replace::
-
-   `Nuitka 0.6.18.4 Python3.7 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py37.msi>`__
-
-.. |NUITKA_STABLE_MSI_37_64| replace::
-
-   `Nuitka 0.6.18.4 Python3.7 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py37.msi>`__
-
-.. |NUITKA_STABLE_MSI_38_32| replace::
-
-   `Nuitka 0.6.18.4 Python3.8 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py38.msi>`__
-
-.. |NUITKA_STABLE_MSI_38_64| replace::
-
-   `Nuitka 0.6.18.4 Python3.8 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py38.msi>`__
-
-.. |NUITKA_STABLE_MSI_39_32| replace::
-
-   `Nuitka 0.6.18.4 Python3.9 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py39.msi>`__
-
-.. |NUITKA_STABLE_MSI_39_64| replace::
-
-   `Nuitka 0.6.18.4 Python3.9 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py39.msi>`__
-
-.. |NUITKA_STABLE_MSI_310_32| replace::
-
-   `Nuitka 0.6.18.4 Python3.9 32 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win32.py39.msi>`__
-
-.. |NUITKA_STABLE_MSI_310_64| replace::
-
-   `Nuitka 0.6.18.4 Python3.9 64 bit MSI <https://nuitka.net/releases/Nuitka-6.1.184.win-amd64.py39.msi>`__
 
 .. |DEBIAN_LOGO| image:: ../../images/debian.png
 
