Fix, main is not the default branch necessarily.

--- a/doc/doc/download.rst.j2
+++ b/doc/doc/download.rst.j2
@@ -241,7 +241,7 @@ git, or use PyPI.
  Github
 ********
 
--  |GIT_LOGO| Stable: **git clone https://github.com/Nuitka/Nuitka**
+-  |GIT_LOGO| Stable: **git clone --branch main https://github.com/Nuitka/Nuitka**
 
 -  |GIT_LOGO| Develop: **git clone --branch develop
    https://github.com/Nuitka/Nuitka**
