Language switcher should also be hidden on small screens

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -144,7 +144,7 @@
 }
 
 @media screen and (max-width: 1000px) {
-    .socialbutton {
+    .share-button-container {
         display: none;
     }
 }
