Disable the language switcher for IE, not proper layout, and we don't care enough
* Just lets avoid it looking broken

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -149,6 +149,13 @@
     }
 }
 
+/* IE only, cannot get it to display correctly */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .switcher-container {
+        display: none;
+    }
+}
+
 .socialbutton:hover {
     height: 70px;
     margin-bottom: 0;
