--- a/doc/doc/download.rst.j2
+++ b/doc/doc/download.rst.j2
@@ -249,25 +249,4 @@ git, or use PyPI.
 Visit https://github.com/Nuitka/Nuitka for the Nuitka repository on
 Github.
 
-
-.. |DEBIAN_LOGO| image:: ../../images/debian.png
-
-.. |UBUNTU_LOGO| image:: ../../images/ubuntu.png
-
-.. |MINT_LOGO| image:: ../../images/mint.png
-
-.. |CENTOS_LOGO| image:: ../../images/centos.png
-
-.. |RHEL_LOGO| image:: ../../images/rhel.png
-
-.. |FEDORA_LOGO| image:: ../../images/fedora.png
-
-.. |SUSE_LOGO| image:: ../../images/opensuse.png
-
-.. |WINDOWS_LOGO| image:: ../../images/windows.jpg
-
-.. |ARCH_LOGO| image:: ../../images/arch.jpg
-
-.. |GENTOO_LOGO| image:: ../../images/gentoo-signet.png
-
-.. |GIT_LOGO| image:: ../../images/git.jpg
+.. include:: ../variables.inc
