--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -83,6 +83,27 @@
     margin-right: 0 !important;
 }
 
+.nuitka-grid-offer ul {
+    --icon-size: .8em;
+    --gutter: .5em;
+    padding: 0 0 0 var(--icon-size);
+    box-sizing: border-box;
+    min-width: 0;
+}
+
+.nuitka-grid-offer ul li {
+    padding-left: var(--gutter);
+    box-sizing: border-box;
+    min-width: 0;
+}
+
+.nuitka-grid-offer ul li::marker {
+    content: "\f00a";
+    font-family: FontAwesome;
+    font-size: var(--icon-size);
+    box-sizing: border-box;
+    min-width: 0;
+}
 
 .nuitka-price p {
     white-space: nowrap;
