Colors and underline for headerlinks too
* Also in devcontainer, do keep my_theme.css separate
  and used from the source directly, so pages do not
  have to be rebuilt for CSS changes to be visible,
  we now need a page reload only.

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -322,3 +322,16 @@ p a:hover {
 p a {
     color: #1C5E89;
 }
+
+a[class~="headerlink"] {
+    color: #1C5E89;
+}
+
+a[class~="headerlink"]:hover {
+    color: #1C5E89;
+    text-decoration: underline;
+}
+
+a[class~="headerlink"]:visited  {
+    color: #1C5E89;
+}
