--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -391,3 +391,12 @@ a[class~="headerlink"]:visited {
     list-style: none !important;
     width: fit-content;
 }
+
+.top_link_nav a:visited {
+    color: #1C5E89;
+}
+
+.top_link_nav a {
+    font-weight: bold;
+    color: #1C5E89;
+}
