Fix search bar width/height being unknown initially
* We should switch to providing our own HTML target
  in the future, but that's not so easy.

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -416,6 +416,11 @@ a[class~="headerlink"]:visited {
     }
 }
 
+.ci-search {
+    width: 195.733px;
+    height: 30px;
+}
+
 @media screen and (min-height: 20em) and (max-width: 1000px) {
     /* Add mobile specifics here */
 }
