Use viewport width for more reactive layout of topbar.

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -493,7 +493,7 @@ a[class~="headerlink"]:visited {
 
 .top_link_nav ul {
     display: inline-flex;
-    gap: 20px;
+    gap: 1vw;
     width: fit-content;
     justify-content: center;
     list-style: none !important;
