Disable smooth scrolling due to Chrome bug

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -1,6 +1,8 @@
+/* TODO: This breaks Google Chrome due to an unresolved bug of its
 html {
     scroll-behavior: smooth
 }
+*/
 
 .wy-nav-content {
     max-width: 1000px !important;
