- Added I hover effect to the hub cards - Fixed a text in the User Documentation hub and the Changelog hub - Split up the Tips section from the User Manual, added intro text and TOC

--- a/_static/my_theme.css
+++ b/_static/my_theme.css
@@ -10,6 +10,10 @@ html {
     margin-bottom: 2rem;
 }
 
+.sd-w-100 {
+    width: 95% !important;
+}
+
 .nuitka-offer-full-package .sd-card {
     background-color: #403472;
 }
@@ -135,6 +139,10 @@ h3 {
 .nuitka-grid-offer .sd-card-text {
     color: white;
     text-align: left;
+}
+
+.sd-card-title {
+    font-size: 20px;
 }
 
 .social-button-wrapper {
@@ -557,5 +565,6 @@ a[class~="headerlink"]:visited {
 }
 
 .hub-card:hover {
-    background-color: red;
+    background-color: #ececec;
+    mix-blend-mode: multiply;
 }
